# devops_offer

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 2024-09-22_initial_migration.py  2024-09-23_add_favorite.py  2024-09-23_add_unique_constraint_on_question_id_in_.py  2024-09-23_add_users.py  2024-09-23_initial_migration.py  2024-09-24_fix_constrains.py  2024-09-26_194705_fix_relationship.py  2024-09-26_203853_add_category_slug.py  2024-09-26_210319_add_question_slug.py  2024-09-27_235124_fix_favorites.py  2024-09-29_163106_add_username_field.py  2024-10-04_203853_add_favorite_constrain.py  2024-10-05_203650_fix_favorite_constrain.py  2024-10-07_161831_fix_slug_lenght.py  2024-10-11_191947_add_views_field_in_questions.py
src/: config.py  main.py  middleware.py
src/admin/: views.py
src/answer/: __init__.py  dependencies.py  models.py  router.py  schemas.py
src/auth/: __init__.py  dependencies.py  fastapi_users.py  manager.py  models.py  router.py  schemas.py  views.py
src/category/: __init__.py  dependencies.py  models.py  router.py  schemas.py  views.py
src/common/: csrf.py  dependencies.py  schemas.py
src/db/: base.py  database.py  models_import.py
src/favorite/: dependencies.py  models.py  router.py  schemas.py
src/profile/: schemas.py  views.py
src/question/: __init__.py  dependencies.py  models.py  router.py  schemas.py  views.py
src/utils/: create_superuser.py  utils.py
static/css/: styles.css
static/js/: hide_edit_password.js  include_tinymce.js  sidebar_switch.js
templates/: 404.html  500.html  api_doc.html  category_detail.html  home.html  question_detail.html
templates/admin/: admin.html  admin_login.html  edit_category.html  edit_question.html
(+15 files in other folders)
