[tool.poetry]
name = "devops-offer"
version = "0.1.0"
description = ""
authors = ["Andrey Truskhin <a.trusikhin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
alembic = {extras = ["asyncio"], version = "^1.13.2"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
orjson = "^3.10.7"
aioredis = "^2.0.1"
sqladmin = "^0.19.0"
python-slugify = "^8.0.4"
fastapi-mail = "^1.4.1"
itsdangerous = "^2.2.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
